--- a/index.html
+++ b/index.html
@@ -157,11 +157,23 @@
             .nav-body{
                 width: 80%;
             }
+            .nav-card img{
+                width: 150px;
+                height: 200px;
+            }
+            .slider{
+                width: 100%;
+                height: 400px;
+            }
             
         }
         @media screen and (max-width: 1024px){
             .nav-body{
                 width: 90%;
+            }
+            .slide{
+                width: 100%;
+
             }
             
         }
