--- a/3-login-card.html
+++ b/3-login-card.html
@@ -14,7 +14,7 @@
                 <img src="img/Cafe-Amazon 6 .jpg" alt="">
             </div>
             <form action="">
-                <h3>Sing in to your account </h3>
+                <h3>login in to your account </h3>
                 <input type="email" name="" id="" placeholder="Email">
                 <input type="password" name="" id="" placeholder="Password">
 
