--- a/index.html
+++ b/index.html
@@ -173,6 +173,9 @@
                 width: 100%;
                 height: 400px;
                 top: 100px;
+                display: grid;
+                justify-content: center;
+                place-content: center;
             }
             .slide-btn{
                 margin: 10px 5px;
