--- a/index.html
+++ b/index.html
@@ -151,6 +151,11 @@
             /* border-radius: 50%; */
         }
         @media screen and (max-width: 768px){
+            *{
+                padding: 0;
+                margin: 0;
+                box-sizing: border-box;
+            }
             .nav1 .nav-meun ul{
                 display: flex;
                 flex-direction: column;
@@ -173,8 +178,13 @@
                 width: 100%;
                 height: 400px;
                 top: 100px;
-                display: grid;
+                padding: 10px 10px;
+            }
+            
+            .slide{
+                display: flex;
                 justify-content: center;
+                align-items: center;
                 place-content: center;
             }
             .slide-btn{
