--- a/index.html
+++ b/index.html
@@ -180,7 +180,9 @@
                 top: 100px;
                 padding: 10px 10px;
             }
-            
+            .slider-body{
+                padding: 0 20px;
+            }
             .slide{
                 display: flex;
                 justify-content: center;
@@ -348,16 +350,16 @@
                     <img src="/img/Cafe-Amazon 6 .jpg" alt="Slide 2">
                 </div>
                 <div class="slide">
-                    <img src="/img/slider 1.jpg" alt="Slide 1">
-                </div>
-                <div class="slide">
-                    <img src="/img/slider 2.jpg" alt="Slide 2">
+                    <img src="/img/slider 11.jpg" alt="Slide 1">
                 </div>
                 <div class="slide">
                     <img src="/img/slider 3.jpg" alt="Slide 1">
                 </div>
                 <div class="slide">
                     <img src="/img/slider 4.png" alt="Slide 2">
+                </div>
+                <div class="slide">
+                    <img src="/img/slider 33.jpg" alt="Slide 2">
                 </div>
             <button class="slide-btn right" onclick="nextSlide()">&#10095;</button>
         </section>
