--- a/index.html
+++ b/index.html
@@ -153,8 +153,12 @@
         @media screen and (max-width: 768px){
             *{
                 padding: 0;
-                margin: 0;
+                margin:10px ;
                 box-sizing: border-box;
+            }
+            body{
+                width: 100%;
+                
             }
             .nav1 .nav-meun ul{
                 display: flex;
@@ -176,12 +180,12 @@
             }
             .slider{
                 width: 100%;
-                height: 400px;
+                height: 370px;
                 top: 100px;
-                padding: 10px 10px;
             }
             .slider-body{
-                padding: 0 20px;
+                display: grid;
+                align-items: center;
             }
             .slide{
                 display: flex;
