--- a/index.html
+++ b/index.html
@@ -153,12 +153,8 @@
         @media screen and (max-width: 768px){
             *{
                 padding: 0;
-                margin:10px ;
+                margin:0;
                 box-sizing: border-box;
-            }
-            body{
-                width: 100%;
-                
             }
             .nav1 .nav-meun ul{
                 display: flex;
