--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
                 display: none; 
                 flex-direction: column;
                 position: fixed;
-                top: -60px;
+                top: 0;
                 right: 0;
                 width: 100%;
                 background: black;
@@ -697,4 +697,4 @@ function toggleMenu() {
     menu.classList.toggle("show"); // បន្ថែម ឬលាក់ class "show"
 }
     showSlides();
-        </script>
+</script>
