--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
                 top: 0;
                 right: 0;
                 width: 100%;
-                background: black;
+                background: #333;
                 text-align: center;
                 padding: 20px 0;
                 transition:transform 0.3s ease-in-out;
