--- a/index.html
+++ b/index.html
@@ -457,10 +457,10 @@
                     <div class="menu-icon" onclick="toggleMenu()">☰</div>
                     <ul id="menu">
                         <li><a href="#">Home</a></li>
-                        <li><a href="#AboutUs">About US</a></li>
-                        <li><a href="#contact">Course</a></li>
+                        <li><a href="#OUR">Course</a></li>
+                        <li><a href="#">Contact</a></li>
                         <li><a href="#follow">Follow</a></li>
-                        <li><a href="#contact">Contact</a></li>
+                        <li><a href="#AboutUs">About US</a></li>
                         <li><a href="3-login-card.html">Login</a></li>
                         <input type="search" placeholder="Search Here">
                     </ul>
@@ -639,7 +639,7 @@
     
     <br><br><hr><br>
     <main>
-        <section class="About" id="contact">
+        <section class="About" id="OUR">
             <a href="#top">
                 <h2>OUR PRESENTATIONERS</h2>
             </a>
