--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
                 <nav>
                     <div class="menu-icon" onclick="toggleMenu()">☰</div>
                     <ul id="menu">
-                        <li><a href="#">Home</a></li>
+                        <li><a href="#nav1">Home</a></li>
                         <li><a href="#OUR">Course</a></li>
                         <li><a href="#">Contact</a></li>
                         <li><a href="#follow">Follow</a></li>
