--- a/index.html
+++ b/index.html
@@ -720,7 +720,7 @@
                         <div class="contact1">
                             <ul>
                                 <li><a href="#top">Home</a></li>
-                                <li><a href="#AboutUs">About US</a></li>
+                                <li><a href="#AboutUs">About_US</a></li>
                                 <li><a href="">Contact</a></li>
                                 <li><a href="https://maps.app.goo.gl/tCo14CoywEbnPHD9A">Address</a></li>
                                 <li><a href="3-login-card.html">Login</a></li>
@@ -728,7 +728,7 @@
                         </div>
                         <div class="contact1" >
                             <ul>
-                                    <li><a href="">Tel : +885 99387901</a></li>
+                                    <li><a href="">Tel:+88599387901</a></li>
                                     <li><a href="">Blog</a></li>
                                     <li><a href="">Partnerships</a></li>
                                     <li><a href="">Careers</a></li>
