--- a/index.html
+++ b/index.html
@@ -309,17 +309,15 @@
             font-size: 30px;
         }
         .footer-container{
-                display: grid;
+                display:grid ;
                 align-items: center;
                 justify-content: space-between;
                 text-align: center;
             }
-        .footer-section{
-                display: flex;
-                justify-content:space-around;
-                padding: 20px 50px;
+        .footer-section h3{
+                padding:0;
                 margin: 10px 20px;
-                
+                text-align: center;
             }
         .footer-bottom {
             margin-top: 20px;
@@ -878,8 +876,8 @@
             </div>
     </main>
     
-    <br><br><hr><br>
     <main id="OUR">
+        <hr><br>
         <section class="About" >
             <a href="#top">
                 <h2>OUR PRESENTATIONERS</h2>
@@ -892,7 +890,12 @@
             </div>
             <div class="About-body">
                 <h2>My Project</h2>
-                <img src="img/IMG_3092.JPG" alt="">
+                <img src="/img/riv chiva 1.png" alt="">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quod.</p>
+            </div>
+            <div class="About-body">
+                <h2>My Project</h2>
+                <img src="img/rin chiva 2.png" alt="">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quod.</p>
             </div>
             <div class="About-body">
